<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mtrl_card_spacing"
        android:layout_marginTop="@dimen/mtrl_card_spacing"
        android:layout_marginRight="@dimen/mtrl_card_spacing"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/colorAccent"
        app:strokeColor="@color/color_on_background"
        app:strokeWidth="1dp"
        tools:ignore="PrivateResource">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/res_card_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/res_card_text_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/res_placeholder_restaurant_name"
                android:textAlignment="textStart"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/res_card_text_issue_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/res_placeholder_total_issue"
                android:textColor="@color/colorTextSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/res_card_image_hazard"
                app:layout_constraintTop_toBottomOf="@+id/res_card_text_title" />

            <ImageView
                android:id="@+id/res_card_image_hazard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contentDes_hazard_level_indicator"
                app:layout_constraintBottom_toBottomOf="@+id/res_card_text_issue_num"
                app:layout_constraintStart_toStartOf="@+id/res_card_text_title"
                app:layout_constraintTop_toTopOf="@+id/res_card_text_issue_num"
                app:layout_constraintVertical_bias="0.8"
                app:srcCompat="@drawable/hazard_level_green" />

            <TextView
                android:id="@+id/res_card_text_inspect_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="6dp"
                android:text="@string/res_placeholder_inspection_date"
                android:textColor="@color/colorTextSecondary"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/res_card_image_restaurant"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:contentDescription="@string/contentDes_restaurant_icon"
                app:layout_constraintBottom_toBottomOf="@+id/res_card_text_issue_num"
                app:layout_constraintEnd_toStartOf="@+id/res_card_text_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/res_card_text_title"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/restaurant_icon" />

            <ImageView
                android:id="@+id/favourites_res_list_img"
                android:layout_width="35dp"
                android:layout_height="24dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@+id/res_card_text_inspect_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/star_grey" />

            <ImageView
                android:id="@+id/fav_card_image_update"
                android:layout_width="18dp"
                android:layout_height="14dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/exclamation_mark" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>