<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.DisplayDetailsActivity"
    tools:showIn="@layout/activity_display_details">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/singleViolation_card"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="21dp"
        app:cardBackgroundColor="@color/colorAccentDark"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/color_on_background"
        app:strokeWidth="2dp"
        tools:ignore="PrivateResource">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/singleViolation_InspecDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/singleViolation_placeholder_InspecDate"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/singleViolation_Type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/singleViolation_Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/singleViolation_placeholder_Type"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/singleViolation_criticalIssuesFound"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/singleViolation_InspecDate" />

            <TextView
                android:id="@+id/singleViolation_nonCriticalIssues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="56dp"
                android:layout_marginBottom="2dp"
                android:text="@string/singleViolation_placeholder_nonCriticalIssues"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/singleViolation_criticalIssuesFound"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/singleViolation_hazardLevelIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toTopOf="@+id/singleViolation_text_hazardLevel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/hazard_level_green" />

            <TextView
                android:id="@+id/singleViolation_criticalIssuesFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="2dp"
                android:text="@string/singleViolation_placeholder_criticalIssuesFound"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/singleViolation_nonCriticalIssues"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/singleViolation_text_hazardLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:text="@string/singleViolation_text_placeholder_hazardLevel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/singleViolation_hazardLevelIcon" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singleViolation_card" />

</androidx.constraintlayout.widget.ConstraintLayout>