<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mtrl_card_spacing"
        android:layout_marginTop="@dimen/mtrl_card_spacing"
        android:layout_marginRight="@dimen/mtrl_card_spacing"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:strokeColor="@color/color_on_background"
        app:strokeWidth="1dp"
        tools:ignore="PrivateResource">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/res_info_window_text_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/res_placeholder_restaurant_name"
                android:textAlignment="center"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/res_info_window_text_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/res_placeholder_total_issue"
                android:textColor="@color/colorTextSecondary"
                app:layout_constraintEnd_toEndOf="@+id/res_info_window_text_title"
                app:layout_constraintStart_toStartOf="@+id/res_info_window_text_title"
                app:layout_constraintTop_toBottomOf="@+id/res_info_window_text_title" />

            <TextView
                android:id="@+id/res_info_window_text_hazard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/res_placeholder_inspection_date"
                android:textColor="@color/colorTextSecondary"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/res_info_window_text_title"
                app:layout_constraintStart_toStartOf="@+id/res_info_window_text_title"
                app:layout_constraintTop_toBottomOf="@+id/res_info_window_text_address" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>