<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.DisplaySingleRestaurantActivity"
    tools:showIn="@layout/activity_display_single_restaurant">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/singleRes_card"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="@color/colorAccentDark"
        app:strokeColor="@color/color_on_background"
        app:strokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PrivateResource">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/singleRes_text_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singleRes_restaurant_address"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/singleRes_text_title"
                app:layout_constraintStart_toStartOf="@+id/singleRes_text_title"
                app:layout_constraintTop_toBottomOf="@+id/singleRes_text_title" />

            <TextView
                android:id="@+id/singleRes_text_coords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/singleRes_restaurant_gps_coordinates"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/singleRes_text_address" />

            <TextView
                android:id="@+id/singleRes_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/res_placeholder_restaurant_name"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ToggleButton
                android:id="@+id/favToggleButton"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/fav_checked"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn=""
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/singleRes_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singleRes_card" />

</androidx.constraintlayout.widget.ConstraintLayout>